force-app/main/default/objects/Prescription__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>