force-app/main/default/objects/Prescription__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <label>Medicine</label>
    <length>25</length>
    <type>Text</type>
</CustomField>