force-app/main/default/objects/Prescription__c/fields/Prescription_Data__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Data__c</fullName>
    <label>Prescription Data</label>
    <type>Date</type>
</CustomField>